feat: 004 AI 없이 코어 구성 정리 및 역할 분리
